syntax = "proto3";

option csharp_namespace = "HashService.Grpc.Protos";

package hash;

service Hasher {

  rpc CalculateSHA256 (CalculateHashRequest) returns (CalculateHashReply);
  rpc CalculateSHA512 (CalculateHashRequest) returns (CalculateHashReply);
  rpc CalculateMD5	  (CalculateHashRequest) returns (CalculateHashReply);
}

message CalculateHashRequest {
  string data = 1;
}

message CalculateHashReply {
  string hash = 1;
}